--- a/src/styles/blocks/top-bar.scss
+++ b/src/styles/blocks/top-bar.scss
@@ -30,11 +30,15 @@
     width: 18px;
     height: 12px;
     margin-left: 3px;
+
+    @include hover (transform, scale(1.1));
   }
 
   &__logo {
     width: 49px;
     height: 52;
+
+    @include hover (transform, scale(1.05));
 
     @include on-tablet {
       width: 58px;
