--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -2,3 +2,9 @@ $bg-color: #fff;
 $tablet-min-width: 640px;
 $desktop-min-width: 1280px;
 $design-min-width: 1440px;
+$green: #1A5A4C;
+$acc-text-color: #fff;
+$main-text-color: #0F0E08;
+$add-text-color: #687480;
+$button-click: #1a4e43;
+
