--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,6 +1,14 @@
 .header {
-  height: 100vh;
+  height: 65vh;
   position: relative;
+
+  @include on-tablet {
+    height: 54vh;
+  }
+
+  @include on-desktop {
+    height: 100vh;
+  }
 
   &__content {
     --columns: 2;
@@ -120,7 +128,6 @@
       grid-column: 1 / 4;
       width: 270px;
       height: 70px;
-      justify-self: end;
     }
 
     @include on-desktop {
