--- a/src/styles/html.scss
+++ b/src/styles/html.scss
@@ -5,3 +5,6 @@
 @import 'blocks/header';
 @import 'blocks/top-bar';
 @import 'blocks/menu';
+@import 'blocks/current-events';
+@import 'blocks/lecture';
+@import 'blocks/gallery';
