--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -3,8 +3,11 @@ $tablet-min-width: 640px;
 $desktop-min-width: 1280px;
 $design-min-width: 1440px;
 $green: #1A5A4C;
+$red: #F14A27;
 $acc-text-color: #fff;
 $main-text-color: #0F0E08;
 $add-text-color: #687480;
 $button-click: #1a4e43;
+$description-text-color: #4E4E4E;
+
 
