--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -55,6 +55,8 @@
       grid-column: 1;
       width: 24px;
       height: 24px;
+
+      @include hover (transform, scale(1.1));
     }
 
     &-list {
@@ -82,6 +84,8 @@
     &-item {
       margin: 0;
       text-align: left;
+
+      @include hover (transform, scale(1.05));
     }
 
     &-link {
@@ -91,6 +95,11 @@
       font-weight: $font-weight-main;
       font-size: 16px;
       line-height: 16px;
+
+      @include on-desktop {
+        font-size: 22px;
+        line-height: 22px;
+      }
     }
   }
 
