--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -26,7 +26,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.5); /* Змінюємо фон сторінки */
   z-index: 1;
