--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -9,5 +9,7 @@ $main-text-color: #0F0E08;
 $add-text-color: #687480;
 $button-click: #1a4e43;
 $description-text-color: #4E4E4E;
+$slider-color: #E0E0E0;
+
 
 
