--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -42,3 +42,10 @@ body {
 .menu:target ~ .header {
   background-color: rgba(0, 0, 0, 0.5); /* Якщо хочете, щоб хедер також змінився */
 }
+
+.page__main {
+  --columns: 6;
+
+  display: grid;
+  column-gap: 30px;
+}
