--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -108,6 +108,7 @@
     display: grid;
     padding-top: 24px;
     grid-column: 1 / -1;
+    color: $acc-text-color;
 
     @include on-tablet {
       --columns: 2;
@@ -136,7 +137,6 @@
       font-family: $IBM-Plex-Sans-font;
       font-size: 14px;
       line-height: 19.69px;
-      color: $acc-text-color;
       margin-bottom: 4px;
 
       @include on-tablet {
@@ -160,7 +160,6 @@
       font-family: $IBM-Plex-Sans-font;
       font-size: 14px;
       margin: 0;
-      color: $acc-text-color;
       line-height: 21px;
 
       &--bold {
@@ -172,7 +171,6 @@
       font-family:  $IBM-Plex-Sans-font;
       font-size: 14px;
       margin: 0;
-      color: $acc-text-color;
       line-height: 21px;
 
       @include on-tablet {
@@ -191,7 +189,7 @@
 }
 
 .menu:target {
-  max-height: 500px; /* Висота для відображення меню (налаштуйте за вашим бажанням) */
-  transform: translateY(0); /* Повертає меню в нормальне положення */
+  max-height: 500px;
+  transform: translateY(0);
   opacity: 1;
 }
