--- a/src/styles/html.scss
+++ b/src/styles/html.scss
@@ -8,3 +8,5 @@
 @import 'blocks/current-events';
 @import 'blocks/lecture';
 @import 'blocks/gallery';
+@import 'blocks/following';
+@import 'blocks/footer';
