--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,4 +1,4 @@
-.gallery {
+.main__gallery {
   grid-column: 1 / -1;
   overflow: hidden;
   display: flex;
@@ -7,11 +7,11 @@
   margin: 185px 0 129px;
 
   @include on-tablet {
-    margin: 390px 0 133px;
+    margin: 211px 0 133px;
   }
 
   @include on-desktop {
-    margin: 708px 0 200px;
+    margin: 304px 0 200px;
   }
 }
 
@@ -28,7 +28,6 @@
 
 .slider {
   width: 280px;
-  height: 410px;
 
   @include on-tablet {
     width: 340px;
@@ -85,8 +84,7 @@
     justify-content: center;
   }
 
-  margin: 30px 0 0;
-
+  margin: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -141,7 +139,7 @@
   }
 
   [id='radio4']:checked ~ .first {
-    margin-left: -20%;
+    margin-left: -22%;
   }
 }
 
@@ -152,6 +150,10 @@
     transition: 0.3s;
 
     @include hover(scale, 1.01);
+
+    &:hover {
+      box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.3);
+    }
 
     &--width {
       grid-column: span 8;
@@ -168,7 +170,6 @@
     }
   }
 
-
   @include on-desktop {
     display: flex;
     flex-direction: column;
@@ -184,4 +185,8 @@
   &-2 {
     @include page-grid;
   }
+}
+
+.main__title--gallery {
+  margin-top: 0 !important;
 }
