--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -9,7 +9,6 @@ body {
   overflow-x: hidden;
 }
 
-
 .container {
   padding-inline: 20px;
 
@@ -28,19 +27,18 @@ body {
   left: 0;
   width: 100%;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.5); /* Змінюємо фон сторінки */
+  background-color: rgba(0, 0, 0, 0.5);
   z-index: 1;
-  display: none; /* Спочатку приховуємо overlay */
+  display: none;
 }
 
-/* Коли відкрито меню (селектор на основі псевдокласу :target) */
 .menu:target ~ .page-overlay {
-  display: block; /* Відображаємо overlay */
-  background-color: rgba(0, 0, 0, 0.5); /* Можна змінити колір сторінки */
+  display: block;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .menu:target ~ .header {
-  background-color: rgba(0, 0, 0, 0.5); /* Якщо хочете, щоб хедер також змінився */
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .page__main {
