--- a/src/styles/blocks/following.scss
+++ b/src/styles/blocks/following.scss
@@ -77,6 +77,7 @@
       justify-self: center;
       display: flex;
       height: 50px;
+      border-radius: 0;
 
       @include hover (transform, scale(1.02));
 
