--- a/src/styles/blocks/following.scss
+++ b/src/styles/blocks/following.scss
@@ -121,6 +121,12 @@
       background-repeat: no-repeat;
       background-size: 24px 24px;
       background-position: center;
+      border: none;
+      cursor: pointer;
+
+      &:hover {
+        @include hover (transform, scale(0.95));
+      }
 
       @include on-tablet {
         width: 70px;
