--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -250,4 +250,36 @@
     margin: 0;
     color: $main-text-color;
   }
+
+  &__top {
+    --columns: 3;
+
+    grid-template-columns: repeat(var(--columns), 1fr);
+    grid-column: 2 / -1;
+    display: grid;
+
+    @include on-tablet {
+      display: none;
+    }
+  }
+
+  &__button {
+    grid-column: 3;
+    justify-self: right;
+    border: 1px solid #1a5a4c;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    display: flex;
+  }
+
+  &__icon-top {
+    background-image: url(../images/Footer/carbon_arrow-up.png);
+    margin: auto;
+    background-size: cover;
+    width: 24px;
+    height: 24px;
+    transition: scale .3s;
+    display: block;
+  }
 }
