--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -179,6 +179,8 @@
       font-size: 14px;
       margin: 0;
       line-height: 21px;
+
+      @include hover (transform, scale(1.02));
     }
   }
 
