--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -109,6 +109,8 @@
   }
 
   &__button {
+    padding: 0;
+    background-color: #fff;
     border: 1px solid $green;
     height: 50px;
     display: flex;
