--- a/src/styles/blocks/following.scss
+++ b/src/styles/blocks/following.scss
@@ -103,6 +103,12 @@
         outline: none;
       }
 
+      &::placeholder {
+        font-family: $Montserrat-font;
+        font-size: 14px;
+        line-height: 14px;
+      }
+
       @include on-tablet {
         width: 320px;
       }
@@ -133,4 +139,18 @@
       }
     }
   }
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  font-family: $Montserrat-font;
+  font-size: 14px;
+  line-height: 14px;
 }
