--- a/src/styles/blocks/following.scss
+++ b/src/styles/blocks/following.scss
@@ -98,6 +98,9 @@
     &-input {
       border: none;
       padding-inline: 24px;
+      font-family: $Montserrat-font;
+      font-size: 14px;
+      line-height: 14px;
 
       &:focus {
         outline: none;
