--- a/src/styles/blocks/top-bar.scss
+++ b/src/styles/blocks/top-bar.scss
@@ -1,48 +1,8 @@
-.top-bar {
-  padding-block: 11px;
-  padding-inline: 20px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 51%;
-  display: flex;
-  height: 79px;
 
-  @include on-tablet {
-    width: 65%;
-    padding-inline: 32px;
-    padding-block: 18px;
-  }
+.icon {
+  width: 24px;
+  height: 24px;
+  display: block;
 
-  @include on-desktop {
-    width: 48%;
-    padding-inline: 45px;
-  }
-
-  &__logo-icon {
-    flex: 1;
-    display: flex;
-    justify-content: space-between;
-  }
-
-  &__menu {
-    padding-top: 24px;
-    width: 18px;
-    height: 12px;
-    margin-left: 3px;
-
-    @include hover (transform, scale(1.1));
-  }
-
-  &__logo {
-    width: 49px;
-    height: 52px;
-
-    @include hover (transform, scale(1.05));
-
-    @include on-tablet {
-      width: 58px;
-      height: 63px;
-    }
-  }
+  @include hover (transform, scale(1.1));
 }
