--- a/src/styles/html.scss
+++ b/src/styles/html.scss
@@ -4,6 +4,8 @@
 @import 'blocks/page';
 @import 'blocks/header';
 @import 'blocks/top-bar';
+@import 'blocks/logo';
+@import 'blocks/media';
 @import 'blocks/menu';
 @import 'blocks/current-events';
 @import 'blocks/lecture';
