--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -30,15 +30,15 @@
   }
 
   &__title {
-  text-transform: uppercase;
-  font-family: $Montserrat-font;
-  font-size: 45px;
-  font-weight: $font-weight-acc;
-  line-height: 45px;
-  text-align: center;
-  color: $main-text-color;
-  margin: 0;
-  margin-top: 269px;
+    text-transform: uppercase;
+    font-family: $Montserrat-font;
+    font-size: 45px;
+    font-weight: $font-weight-acc;
+    line-height: 45px;
+    text-align: center;
+    color: $main-text-color;
+    margin: 0;
+    margin-top: 269px;
 
     @include on-tablet {
       font-size: 54px;
@@ -66,7 +66,7 @@
     align-items: center;
     cursor: pointer;
 
-    @include hover (transform, scale(1.05));
+    @include hover(transform, scale(1.05));
 
     &:hover {
       box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
@@ -116,143 +116,80 @@
       }
     }
   }
-}
 
-.header__events {
-  display: none;
-
-  @include on-desktop {
-    display: inline-block;
-    left: 61px;
-    top: 547px;
-    text-decoration: none;
-  }
-
-  &-text {
-    font-family: $IBM-Plex-Sans-font;
-    font-size: 14px;
-    line-height: 14px;
-    color: $add-text-color;
-    text-transform: uppercase;
-    margin-left: 0;
-    font-weight: $font-weight-acc;
-
-    &::before {
-      content: '';
-      display: block;
-      position: absolute;
-      height: 1.3px;
-      width: 70px;
-      background-color: $green;
-      margin: 7px 20px 0 -9px;
-      left: -80px;
-
-    }
+  &__events {
+    display: none;
 
     @include on-desktop {
-      display: block;
-      text-align: center;
-      transform: rotate(270deg) translateX(68px);
-      transform-origin: center left;
+      display: inline-block;
+      left: 61px;
+      top: 547px;
       text-decoration: none;
-      margin: 0 auto;
+    }
+
+    &-text {
+      font-family: $IBM-Plex-Sans-font;
+      font-size: 14px;
+      line-height: 14px;
+      color: $add-text-color;
+      text-transform: uppercase;
+      margin-left: 0;
+      font-weight: $font-weight-acc;
+
+      &::before {
+        content: '';
+        display: block;
+        position: absolute;
+        height: 1.3px;
+        width: 70px;
+        background-color: $green;
+        margin: 7px 20px 0 -9px;
+        left: -80px;
+      }
+
+      @include on-desktop {
+        display: block;
+        text-align: center;
+        transform: rotate(270deg) translateX(68px);
+        transform-origin: center left;
+        text-decoration: none;
+        margin: 0 auto;
+      }
     }
   }
-}
 
-@media (min-width: 840px) and (max-width: 950px) {
-  .header__bg-img {
-    width: 410px !important;
-  }
-}
-
-@media (min-width: 951px) and (max-width: 1279px) {
-  .header__bg-img {
-    width: 550px !important;
-  }
-}
-
-@media (min-width: 640px) and (max-width: 735px) {
-  .header__title {
-    font-size: 38px;
-    line-height: 56px;
+  &__bg-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: -1;
   }
 
-  .header__button {
-    height: 60px;
-    width: 200px;
-  }
-
-  .header__button-dec {
-    width: 60px;
-    height: 60px;
-  }
-}
-
-.header__bg-container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: -1;
-}
-
-.header__bg {
-  position: relative;
-  display: flex;
-  justify-content: center;
-
-  @include on-tablet {
-    justify-content: flex-end;
-  }
-
-  &-img {
-    width: 100%;
-    height: 300px;
-    object-fit: cover;
-    object-position: top;
+  &__bg {
+    position: relative;
+    display: flex;
+    justify-content: center;
 
     @include on-tablet {
-      width: 374px;
-      height: 384px;
+      justify-content: flex-end;
     }
 
-    @include on-desktop {
-      width: 725px;
-      height: 655px;
+    &-img {
+      width: 100%;
+      height: 300px;
+      object-fit: cover;
+      object-position: top;
+
+      @include on-tablet {
+        width: 374px;
+        height: 384px;
+      }
+
+      @include on-desktop {
+        width: 725px;
+        height: 655px;
+      }
     }
   }
 }
-
-.header__logo {
-  width: 48px;
-  height: 50px;
-  position: absolute;
-  top: 8px;
-  text-align: center;
-
-  @include on-tablet {
-    right: 230px;
-    top: 13px;
-    width: 70px;
-    height: 70px;
-  }
-
-  @include on-desktop {
-    right: 608px;
-  }
-}
-
-.logo {
-  background-image: url(../images/Header/NAMU-favicon.webp);
-  background-size:  48px 50px;
-  background-repeat: no-repeat;
-  z-index: 999;
-  cursor: pointer;
-  display: block;
-
-  @include on-tablet {
-    background-size: 58px 61px;
-  }
-}
-
