--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,17 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import 'utils/extends';
+@import 'utils/mixins';
+@import 'utils/vars';
+@import 'blocks/page';
+@import 'blocks/header';
+@import 'blocks/menu';
+@import 'blocks/art-museum';
+@import 'blocks/current-events';
+@import 'blocks/go-back';
+@import 'blocks/dreams';
+@import 'blocks/romanticism';
+@import 'blocks/gallery';
+@import 'blocks/subscription';
+@import 'blocks/footer';
