remove button-link

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -199,6 +199,12 @@
     @include on-tablet {
       display: none;
     }
+
+    &-link{
+      @include on-tablet {
+        display: none;
+      }
+    }
   }
 
   &__line {
