--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -47,8 +47,11 @@
     }
 
     @include on-desktop {
-      margin: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       flex-wrap: wrap;
+      margin: 0;
     }
   }
 
@@ -69,6 +72,8 @@
       margin-right: 30px;
       margin-bottom: 30px;
     }
+
+    @include hover(transform, scale(1.05));
   }
 
   &__img-2 {
@@ -76,10 +81,13 @@
 
     @include on-desktop {
       display: block;
+      margin-right: 30px;
       margin-bottom: 30px;
       height: 600px;
       width: 770px;
     }
+
+    @include hover(transform, scale(1.05));
   }
 
   &__img-3 {
@@ -92,6 +100,8 @@
       margin-right: 30px;
       margin-bottom: 30px;
     }
+
+    @include hover(transform, scale(1.05));
   }
 
   &__img-4 {
@@ -102,6 +112,8 @@
       height: 360px;
       width: 370px;
     }
+
+    @include hover(transform, scale(1.05));
   }
 
   &__img-5 {
@@ -116,6 +128,8 @@
     @include on-desktop {
       display: none;
     }
+
+    @include hover(transform, scale(1.05));
   }
 
   &__ellipses {
