--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -24,16 +24,25 @@
     width: calc(100% - 112px);
   }
 
+  &-background{
+    background: $c-gray;
+  }
+
   &:target {
     opacity: 1;
     pointer-events: all;
     overflow: hidden;
     transform: translateY(0);
+
+    .menu-background{
+      background: rgba($color: #000, $alpha: 0.8);
+    }
   }
 
-  &:target .menu__background {
-    background-color: rgba($color: #000, $alpha: 0.8);
+  &:target .menu-background {
+    background: rgba($color: #000, $alpha: 0.8);
   }
+
 
   &__link-cros {
     display: flex;
