--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -29,6 +29,10 @@
   }
 
   &:target {
+    top: 0;
+    position: absolute;
+    bottom: 0;
+    left: 0;
     overflow: hidden;
     opacity: 1;
     pointer-events: all;
