and another one

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,14 +1,13 @@
 .menu {
-  background: rgba($color: #000, $alpha: 0.7);
+  background: #000000b3;
 
   &__content {
+    opacity: 0;
     display: flex;
     flex-direction: column;
     position: fixed;
-    margin: 0;
-    top: 0;
-    opacity: 0;
     background-color: rgba(26, 90, 76, 1);
+
     color: white;
     width: calc(100% - 40px);
     padding: 27px 20px;
@@ -29,13 +28,11 @@
   }
 
   &:target {
-    top: 0;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    overflow: hidden;
     opacity: 1;
     pointer-events: all;
+    position: absolute;
+    inset: 0;
+    overflow: hidden;
     transform: translateY(0);
 
     .menu-background {
