--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -2,18 +2,11 @@
   background: #000000b3;
 
   &__content {
-    opacity: 0;
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    background-color: rgba(26, 90, 76, 1);
-
-    color: white;
-    width: calc(100% - 40px);
-    padding: 27px 20px;
+    color: #fff;
     pointer-events: none;
-    transition: all 0.3s;
-    transform: translateY(-100%);
+    padding: 27px 20px;
+    display: flex;
+    background-color: rgba(26, 90, 76, 1);
 
     @include on-tablet {
       padding: 39px 34px;
