--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,9 +1,10 @@
 .menu {
   background: #000000b3;
+  opacity: 0;
+  transform: translateX(-100%);
 
   &__content {
     color: #fff;
-    pointer-events: none;
     padding: 27px 20px;
     display: flex;
     background-color: rgba(26, 90, 76, 1);
