--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,5 +1,6 @@
 .menu {
   background: #000000b3;
+  position: absolute;
   opacity: 0;
   transform: translateX(-100%);
 
@@ -7,6 +8,7 @@
     color: #fff;
     padding: 27px 20px;
     display: flex;
+    flex-direction: column;
     background-color: rgba(26, 90, 76, 1);
 
     @include on-tablet {
