--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -49,6 +49,10 @@
       height: 13px;
       width: 13px;
     }
+
+    @include on-tablet{
+      margin-right: 38px;
+    }
   }
 
   &__links {
@@ -62,10 +66,11 @@
     margin-bottom: 24px;
 
     @include on-tablet {
-      width: 292px;
+      width: 222px;
+      margin-right: 38px;
     }
 
-    @include on-tablet {
+    @include on-desktop {
       width: 494px;
       margin-right: 102px;
       font-size: 22px;
