--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -5,6 +5,10 @@
   background: $c-gray;
 }
 
+.page__body:has(.menu:target) {
+  overflow: hidden;
+}
+
 .upper__page {
   display: flex;
   flex-direction: column;
