add inst & fcbk links

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -52,6 +52,7 @@
       line-height: 36px;
       text-align: left;
       color: rgba(15, 14, 8, 1);
+      margin: 0;
 
       &:hover {
         color: $hoverColor;
