--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,17 @@
 @import 'utils';
-@import 'fonts';
 @import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import 'block/page';
+@import 'block/header';
+@import 'block/icon';
+@import 'block/button-primary';
+@import 'block/menu';
+@import 'block/nav';
+@import 'block/schedule';
+@import 'block/exhibitions';
+@import 'block/exhibition';
+@import 'block/lection';
+@import 'block/gallery';
+@import 'block/sign-up';
+@import 'block/form';
+@import 'block/footer';
+@import 'block/contacts';
