add task solution

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -117,6 +117,10 @@
       grid-row: 1;
       padding-right: 65px;
     }
+
+    &-description:hover {
+      color: blue;
+    }
   }
 
   &-schedule, &-contacts {
@@ -128,6 +132,7 @@
       text-align: left;
       color: #0F0E08;
     }
+
 
     &-title {
       margin-top: 40px;
