--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -48,6 +48,8 @@
 
   &-burger-menu {
     display: flex;
+    // cursor: pointer;
+    // pointer-events: all;
 
     &-icon {
       height: 24px;
