--- a/src/styles/sign-up.scss
+++ b/src/styles/sign-up.scss
@@ -49,6 +49,18 @@
   }
 
   &-contact-form {
+    margin-top: 50px;
+    display: flex;
+
+    // flex-direction: row;
+    gap: 0;
+    align-items: center;
+    justify-content: center;
+
+    @include onTablet {
+      gap: 16px;
+      margin-top: 64px;
+    }
 
 
     &-email {
@@ -65,35 +77,46 @@
       box-sizing: border-box;
       margin: 0;
     }
+
+    &-red-box {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 50px;
+      height: 50px;
+      border: none;
+      background-color: #F14A27;
+      margin: 0;
+    }
   }
 
-  &-red-box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50px;
-    height: 50px;
-    border: none;
-    background-color: #F14A27;
-    margin: 0;
-  }
+  // &-red-box {
+  //   display: flex;
+  //   justify-content: center;
+  //   align-items: center;
+  //   width: 50px;
+  //   height: 50px;
+  //   border: none;
+  //   background-color: #F14A27;
+  //   margin: 0;
+  // }
 }
 
-.container-for-form-and-square {
-  margin-top: 50px;
-  display: flex;
+// .container-for-form-and-square {
+//   margin-top: 50px;
+//   display: flex;
 
-  // flex-direction: row;
-  gap: 0;
-  align-items: center;
-  justify-content: center;
+//   // flex-direction: row;
+//   gap: 0;
+//   align-items: center;
+//   justify-content: center;
 
-  @include onTablet {
-    gap: 16px;
-    margin-top: 64px;
-  }
+//   @include onTablet {
+//     gap: 16px;
+//     margin-top: 64px;
+//   }
 
-}
+// }
 
 .container-for-all-form {
   position: absolute;
