add task solution

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -30,6 +30,7 @@
     align-items: center;
     gap: 88px;
     position: absolute;
+    // z-index: 100;
     top: 0;
     left: 0;
     padding-inline: 20px;
@@ -48,8 +49,7 @@
 
   &-burger-menu {
     display: flex;
-    // cursor: pointer;
-    // pointer-events: all;
+    z-index: 1;
 
     &-icon {
       height: 24px;
