add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,43 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import 'blocks/header';
+@import 'blocks/menu-nav';
+@import 'blocks/page';
+@import 'blocks/current-events';
+@import 'blocks/section-title';
+@import 'blocks/exhibition';
+@import 'blocks/content';
+@import 'blocks/classicism';
+@import 'blocks/gallery';
+@import 'blocks/subscription';
+@import 'blocks/footer';
+@import 'blocks/menu';
+@import 'blocks/footer-nav';
 
 body {
   background: $c-gray;
+}
+
+.main__content {
+  display: grid;
+  row-gap: 70px;
+  padding-block: 70px;
+
+  @include on-tablet {
+    padding-block: 88px;
+    row-gap: 88px;
+  }
+
+  @include on-desktop {
+    padding-block: 200px;
+    row-gap: 200px;
+  }
+}
+
+.bold {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 21px;
 }
