add task solution

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -30,6 +30,7 @@
     align-items: center;
     gap: 88px;
     position: absolute;
+
     // z-index: 100;
     top: 0;
     left: 0;
@@ -173,3 +174,8 @@
   }
 }
 
+.picture {
+  display: block; width: 80%; min-width: 500px;
+  margin: 40px auto;
+
+}
