add task solution

--- a/src/styles/aside.scss
+++ b/src/styles/aside.scss
@@ -181,5 +181,7 @@
   transform: translateX(0);
 }
 
-
+.page:has(.aside:target) {
+  overflow: hidden; /* Блокуємо прокрутку, коли aside активний */
+}
 
