--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -133,6 +133,11 @@
       color: #0F0E08;
     }
 
+    &-description-link {
+      color: #0F0E08;
+      text-decoration: none;
+    }
+
 
     &-title {
       margin-top: 40px;
@@ -215,6 +220,11 @@
       text-align: left;
       color: #0F0E08;
       text-decoration: none;
+
+      &:hover {
+        color: #1A5A4C;
+        text-decoration: none;
+      }
     }
   }
 
