--- a/src/styles/sign-up.scss
+++ b/src/styles/sign-up.scss
@@ -76,6 +76,15 @@
       border: none;
       box-sizing: border-box;
       margin: 0;
+
+      @include onTablet {
+        width: 374px;
+        height: 70px;
+      }
+
+      @include onDesktop {
+        width: 470px;
+      }
     }
 
     &-red-box {
@@ -88,6 +97,11 @@
       background-color: #F14A27;
       margin: 0;
       cursor: pointer;
+
+      @include onTablet {
+        width: 70px;
+        height: 70px;
+      }
     }
   }
 
