add task solution

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -149,6 +149,33 @@
     }
   }
 
+  &-schedule-description {
+
+    @include onTablet {
+      display: none;
+    }
+  }
+
+  &-schedule-description-on-tablet {
+    display: none;
+
+    @include onTablet {
+      display: block;
+    }
+
+    @include onDesktop {
+      display: none;
+    }
+  }
+
+  &-schedule-description-on-desktop {
+    display: none;
+
+    @include onDesktop {
+      display: block;
+    }
+  }
+
   &-nav {
     margin-top: 40px;
     margin-bottom: 80px;
