--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -4,10 +4,16 @@
   &-title {
     font-family: Montserrat, sans-serif;
     font-size: 36px;
+    font-weight: 700;
     text-align: center;
     color: #0F0E08;
     margin: 0;
     padding-top: 200px;
+
+    @include onTablet {
+      text-align: left;
+      font-size: 48px;
+    }
   }
 
   &-container-for-display-grid {
