add task solution

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -161,6 +161,11 @@
 
     @include onTablet {
       display: block;
+      font-family: "IBM Plex Sans", sans-serif;
+      font-size: 14px;
+      font-weight: 400;
+      text-align: left;
+      color: #0F0E08;
     }
 
     @include onDesktop {
@@ -173,6 +178,11 @@
 
     @include onDesktop {
       display: block;
+      font-family: "IBM Plex Sans", sans-serif;
+      font-size: 14px;
+      font-weight: 400;
+      text-align: left;
+      color: #0F0E08;
     }
   }
 
