--- a/src/styles/sign-up.scss
+++ b/src/styles/sign-up.scss
@@ -85,6 +85,10 @@
       @include onDesktop {
         width: 470px;
       }
+
+      &:focus {
+        outline: none; /* Видаляє outline під час фокусу */
+      }
     }
 
     &-red-box {
