add task solution

--- a/src/styles/aside.scss
+++ b/src/styles/aside.scss
@@ -1,6 +1,6 @@
 .aside {
   background-color: #1A5A4C;
-  height: 65vh;
+  height: 70vh;
   position: fixed;
   top: 0;
   right: 0;
@@ -184,4 +184,9 @@
 .page:has(.aside:target) {
   overflow: hidden; /* Блокуємо прокрутку, коли aside активний */
 }
+
+.aside-schedule-time span {
+  white-space: nowrap; /* Забороняє перенесення на новий рядок */
+}
+
 
