add task solution

--- a/src/styles/blocks/current-events.scss
+++ b/src/styles/blocks/current-events.scss
@@ -2,16 +2,16 @@
   @include page-grid;
 
   &__title {
-    padding-block: 88px 40px;
+    padding-bottom: 40px;
     grid-column: 1/-1;
+    margin: 0;
 
     @include on-tablet {
-      padding-block: 107px 48px;
-      margin-top: 118px;
+      padding-bottom: 48px;
     }
 
     @include on-desktop {
-      padding-block: 200px 56px;
+      padding-block: 118px 56px;
     }
   }
 
