--- a/src/styles/blocks/exhibition.scss
+++ b/src/styles/blocks/exhibition.scss
@@ -25,7 +25,7 @@
 
   &__content {
     display: inline-block;
-    padding: 0;
+    padding-left: 22px;
     margin: 0;
     font-family: 'IBM Plex Sans', sans-serif;
     font-size: 16px;
@@ -51,7 +51,7 @@
   }
 
   &__date {
-    padding: 0;
+    padding-right: 22px;
     margin: 0;
     display: inline-block;
     font-family: 'IBM Plex Sans', sans-serif;
