--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -56,8 +56,33 @@
 
       @include on-desktop {
         padding-top: 113px;
+        font-size: 72px;
+        line-height: 86.4px;
       }
     }
+
+    &::after {
+      content: '';
+      position: absolute;
+      width: 1px;
+      height: 70px;
+      background-color: #1a5a4c;
+      top: 565px;
+      left: 62px;
+    }
+  }
+
+  &__rotate {
+    position: absolute;
+    display: inline;
+    font-family: 'IBM Plex Sans', sans-serif;
+    font-size: 14px;
+    line-height: 14px;
+    color: #687480;
+    transform: rotate(180deg);
+    writing-mode: vertical-lr;
+    margin: 0;
+    padding-bottom: 144px;
   }
 
   &__search-form {
@@ -80,6 +105,7 @@
 
     @include on-desktop {
       margin-top: 89px;
+      margin-left: 200px;
     }
 
     &--text {
