--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -194,7 +194,7 @@
     background-size: cover;
     position: absolute;
     right: 20px;
-    top: 267px;
+    bottom: -50px;
     width: 50px;
     height: 50px;
 
