--- a/src/styles/blocks/section-title.scss
+++ b/src/styles/blocks/section-title.scss
@@ -3,11 +3,12 @@
   font-size: 36px;
   font-weight: 700;
   line-height: 36px;
-  text-align: left;
+  text-align: center;
   color: #0f0e08;
 
   @include on-tablet {
     font-size: 48px;
     line-height: 48px;
+    text-align: left;
   }
 }
