add task solution

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -62,27 +62,33 @@
     }
 
     &::after {
-      content: '';
-      position: absolute;
-      width: 1px;
-      height: 70px;
-      background-color: #1a5a4c;
-      top: 565px;
-      left: 62px;
+      @include on-desktop {
+        content: '';
+        position: absolute;
+        width: 1px;
+        height: 70px;
+        background-color: #1a5a4c;
+        top: 565px;
+        left: 62px;
+      }
     }
   }
 
   &__rotate {
-    position: absolute;
-    display: inline;
-    font-family: 'IBM Plex Sans', sans-serif;
-    font-size: 14px;
-    line-height: 14px;
-    color: #687480;
-    transform: rotate(180deg);
-    writing-mode: vertical-lr;
-    margin: 0;
-    padding-bottom: 144px;
+    display: none;
+
+    @include on-desktop {
+      position: absolute;
+      display: inline;
+      font-family: 'IBM Plex Sans', sans-serif;
+      font-size: 14px;
+      line-height: 14px;
+      color: #687480;
+      transform: rotate(180deg);
+      writing-mode: vertical-lr;
+      margin: 0;
+      padding-bottom: 144px;
+    }
   }
 
   &__search-form {
