add task solution

--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -1,3 +1,8 @@
 @import 'utils/vars';
 @import 'utils/mixins';
 @import 'utils/extends';
+@import 'utils/header';
+@import 'utils/top-bar';
+@import 'utils/footer';
+@import 'utils/page';
+
