--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,199 @@
 @import 'fonts';
 @import 'typography';
 
+* {
+  margin: 0;
+  padding: 0;
+  scroll-behavior: smooth;
+}
+
 body {
-  background: $c-gray;
+  background: $color-white;
+}
+
+.main {
+  &__picture {
+    padding-top: 40px;
+
+  }
+
+  &__playbill {
+    padding-top: 20px;
+  }
+
+  &__date {
+    color: $color-green;
+    line-height: 24px;
+
+  }
+
+  &__name {
+    &::after {
+      content: '';
+      width: 10px;
+      height: 10px;
+      background-color: $color-point;
+    }
+  }
+
+  &__text {
+    font-family: $font-ibm-plex-sans;
+    font-size: 16px;
+    line-height: 24px;
+    color: $color-dark-gray;
+  }
+
+  &__lection {
+    margin-top: 60px;
+    display: flex;
+    justify-content: end;
+    flex-direction: column;
+    background-image: url(../images/picture3.svg);
+    background-position: center;
+    background-size: cover;
+    height: 210px;
+    margin-bottom: 130px;
+  }
+
+  &__box {
+    background-color: $color-white;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    transform: translateY(50%);
+    box-shadow: 0 2px 0 0 $shadow-color;
+  }
+
+  &__content {
+    padding: 20px;
+  }
+
+  &__gallery {
+    padding-bottom: 50px;
+  }
+
+  &__registration {
+    background-image: url(../images/picture5.svg);
+    background-position: center;
+    background-size: cover;
+    color: $color-white;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding: 88px 0;
+    margin-bottom: 50px;
+  }
+
+  &__events {
+    font-family: $font-ibm-plex-sans;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 18px;
+    padding-bottom: 50px;
+  }
+
+  &__form {
+    display: flex;
+    text-align: center;
+    gap: 16px;
+    justify-content: space-between;
+    height: 70px;
+  }
+
+  &__email {
+    width: 100%;
+
+    &::placeholder {
+      padding-left: 24px;
+      font-family: $font-montserrat;
+      font-size: 14px;
+      line-height: 14px;
+    }
+  }
+
+  &__button {
+    border: none;
+  }
+
+  &__network {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 40px;
+  }
+
+  &__icons {
+    display: flex;
+    gap: 20px;
+  }
+
+  &__arrow {
+    width: 70px;
+    height: 70px;
+  }
+
+  &__schedule {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+  }
+
+  &__information {
+    font-family: $font-ibm-plex-sans;
+    font-weight: 400;
+    line-height: 19.69px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__contacts {
+    display: flex;
+    flex-direction: column;
+    padding-top: 20px;
+    font-family: $font-ibm-plex-sans;
+    line-height: 21px;
+  }
+
+  &__work {
+    padding: 20px 0;
+  }
+
+  &__day {
+    font-weight: 400;
+    font-family: $font-ibm-plex-sans;
+    line-height: 21px;
+  }
+
+  &__butt {
+    display: flex;
+    justify-content: end;
+    padding-bottom: 20px;
+  }
+
+  &__up {
+    width: 50px;
+    height: 50px;
+    border: 1px solid $color-green;
+    border-radius: 50px;
+    background-color: $color-white;
+  }
+
+  &__about {
+    padding: 40px 0;
+    border-top: 1px solid $border-top;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+  }
+
+  &__navigation {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  &__nav {
+    color: $color-black;
+  }
+
 }
