--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -2,3 +2,44 @@
   font-family: Roboto, sans-serif;
   font-weight: 400;
 }
+
+.name {
+  display: flex;
+  align-items: center;
+  padding-bottom: 10px;
+  font-family: $font-montserrat;
+  font-size: 28px;
+  line-height: 28px;
+  color: $color-black;
+  gap: 10px;
+}
+
+.exhibion {
+  display: flex;
+  align-items: center;
+  padding-bottom: 10px;
+  font-family: $font-ibm-plex-sans;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 16px;
+  color: $color-gray;
+  text-transform: uppercase;
+}
+
+.title {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  padding-top: 50px;
+  font-family: $font-montserrat;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 36px;
+}
+
+a {
+  text-decoration: none;
+  font-family: $font-ibm-plex-sans;
+  font-size: 14px;
+  font-weight: 400;
+}
