--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,13 @@
 $c-gray: #eee;
+$tablet-min-width: 640px;
+$desktop-min-width: 1280px;
+$font-montserrat: Montserrat, sans-serif;
+$font-ibm-plex-sans: IBM Plex Sans, sans-serif;;
+$color-black: #0F0E08;
+$color-green: #1A5A4C;
+$color-gray: #687480;
+$color-dark-gray: #4E4E4E;
+$color-point: #F14A27;
+$color-white: #FFF;
+$shadow-color: #1A5A4C40;
+$border-top: #1A5A4C80;
